--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -8,5 +8,5 @@ ports:
 
 # List the start up tasks. You can start them in parallel in multiple terminals. See https://www.gitpod.io/docs/config-start-tasks/
 tasks:
-  - init: ./setup.sh
+  - init: bash ./setup.sh
     command: echo 'Laravel Project Started'
