--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -3,10 +3,10 @@ image:
 
 # List the ports you want to expose and what to do when they are served. See https://www.gitpod.io/docs/config-ports/
 ports:
-  - port: 3000
+  - port: 8000
     onOpen: open-preview
 
 # List the start up tasks. You can start them in parallel in multiple terminals. See https://www.gitpod.io/docs/config-start-tasks/
 tasks:
-  - init: bash ./setup.sh
+  - init: bash ./setup/laravel.sh
     command: echo 'Laravel Project Started'
